# Ray_tracing_img_generator

./: .gitignore  CMakeLists.txt  README.md
include/: ray.h  vec3.h
include/hittables/: hitRecord.h  hittable.h  hittableList.h  sphere.h
include/material/: dielectric.h  lambertian.h  material.h  metal.h
include/utils/: camera.h  color.h  interval.h  math.h  vec3.h
src/: color.cpp  main.cpp  vec3.cpp
src/hittables/: hittableList.cpp  sphere.cpp
src/utils/: camera.cpp  color.cpp  interval.cpp  vec3.cpp
